feat: FEP-5feb準拠のアナウンス判定を追加
